@@ -1,3 +1,7 @@
+2017-08-15  Tatsuwo  <yto at example.com>
+
+	* conv-aarep-old2new.pl: add
+
 2017-08-13  Tatsuwo  <yto at example.com>
 
 	* start!
